<?xml version="1.0"?>
<package format="2">
  <name>yamax_control</name>
  <version>0.0.1</version>
  <description>The yamax_control package</description>

  <maintainer email="me@coord-e.com">coord.e</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Y-modify/yamax</url>

  <author email="me@coord-e.com">coord.e</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
