<?xml version="1.0"?>
<package format="2">
  <name>yamax_gazebo</name>
  <version>0.0.1</version>
  <description>The yamax_gazebo package</description>

  <maintainer email="me@coord-e.com">coord.e</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Y-modify/yamax</url>

  <author email="me@coord-e.com">coord.e</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
</package>
