<?xml version="1.0"?>
<package format="2">
  <name>yamax_learn</name>
  <version>0.0.0</version>
  <description>The yamax_learn package</description>

  <maintainer email="me@coord-e.com">coord.e</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Y-modify/yamax</url>

  <author email="me@coord-e.com">coord.e</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>
